# google-calendars-rooms-pkg

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: README.md
src/google_calendars_rooms_pkg/: addon.py
src/google_calendars_rooms_pkg/actions/: __init__.py  base.py  create_events.py  freebusy_query.py  list_events.py
src/google_calendars_rooms_pkg/configuration/: __init__.py  addonconfig.py  baseconfig.py
src/google_calendars_rooms_pkg/tools/: __init__.py  base.py
tests/: test_addon.py  test_configuration.py  test_credentials.py  test_tools.py
tests/actions/: test_example.py
